--- a/styles/style.scss
+++ b/styles/style.scss
@@ -24,4 +24,6 @@ body{
     background-color: var(--color-primary);
     font-family: "Poppins", sans-serif;
     font-size: 1.1rem;
+    color: var(--color-white);
+    transition: all 0.4s ease-in-out;
 }
