--- a/styles/style.scss
+++ b/styles/style.scss
@@ -48,4 +48,11 @@ section{
 }
 .section{
     transform: translateY(-100%);
+    transition: all 0.4s ease-in-out;
+    background-color: var(--color-primary);
+}
+
+.sec1{
+    display: none;
+    transform: translateY(0) scale(1);
 }
