--- a/styles/style.scss
+++ b/styles/style.scss
@@ -47,7 +47,7 @@ section{
     padding: 3rem 18rem;
 }
 .section{
-    transform: translateY(-100%);
+    transform: translateY(-100%) scale(0);
     transition: all 0.4s ease-in-out;
     background-color: var(--color-primary);
 }
@@ -55,4 +55,33 @@ section{
 .sec1{
     display: none;
     transform: translateY(0) scale(1);
+}
+.sec2{
+    display: none;
+    transform: translateY(0) scale(1);
+}
+.sec3{
+    display: none;
+    transform: translateY(0) scale(1);
+}
+.sec4{
+    display: none;
+    transform: translateY(0) scale(1);
+}
+.sec5{
+    display: none;
+    transform: translateY(0) scale(1);
+}
+
+//controlls
+.controlls{
+    position: fixed;
+    z-index: 10;
+    top: 50%;
+    right: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-50%);
 }
