js file initialized and icon styling

--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,13 @@ section {
   justify-content: center;
   transform: translateY(-50%);
 }
+.controlls .active-btn {
+  background-color: var(--color-secondary) !important;
+  transition: all 0.4s ease-in-out;
+}
+.controlls .active-btn i {
+  color: var(--color-white) !important;
+}
 .controlls .control {
   padding: 1rem;
   cursor: pointer;
@@ -105,4 +112,9 @@ section {
   justify-content: center;
   margin: 0.7rem 0;
   box-shadow: var(--box-shadow-1);
+}
+.controlls .control i {
+  font-size: 1.2rem;
+  color: var(--color-grey-2);
+  pointer-events: none;
 }/*# sourceMappingURL=style.css.map */
