--- a/styles/style.scss
+++ b/styles/style.scss
@@ -85,6 +85,14 @@ section{
     align-items: center;
     justify-content: center;
     transform: translateY(-50%);
+    .active-btn{
+        background-color: var(--color-secondary) !important;
+        transition: all 0.4s ease-in-out;
+        i{
+            color: var(--color-white) !important;
+        }
+
+    }
     .control{
         padding: 1rem;
         cursor: pointer;
@@ -97,5 +105,10 @@ section{
         justify-content: center;
         margin: 0.7rem 0;
         box-shadow: var(--box-shadow-1);
+        i{
+            font-size: 1.2rem;
+            color: var(--color-grey-2);
+            pointer-events: none;
+        }
     }
 }
