--- a/styles/style.scss
+++ b/styles/style.scss
@@ -56,22 +56,18 @@ section{
 .sec1{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(174, 205, 90);
 }
 .sec2{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: slateblue;
 }
 .sec3{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(197, 205, 90);
 }
 .sec4{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(165, 205, 90);
 }
 .sec5{
     display: none;
@@ -125,6 +121,45 @@ section{
             font-size: 1.2rem;
             color: var(--color-grey-2);
             pointer-events: none;
+        }
+    }
+}
+
+.header-content{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 100%;
+    .left-header{
+        display: flex;
+        align-items: center;
+        position: relative;
+        .h-shape{
+            transition: all .4s ease-in-out;
+            width: 65%;
+            height: 100%;
+            background-color: var(--color-secondary);
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: -1;
+            clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);        }
+        .image{
+            border-radius: var(--br-sm-2);
+            height: 90%;
+            width: 68%;
+            margin-left: 4rem;
+            background-color: var(--color-black);
+            transition: all .4s ease-in-out;
+            .img{
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                transition: all .4s ease-in-out;
+                filter: grayscale(100%);
+                &:hover{
+                    filter: grayscale(0);
+                }
+            }
         }
     }
 }
