--- a/styles/style.css
+++ b/styles/style.css
@@ -217,4 +217,19 @@ section {
   justify-content: center;
   border-radius: 50%;
   padding: 1rem;
+}
+.main-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(100%);
+  transition: all 0.4s ease-in-out;
+  z-index: -1;
+}
+.main-btn:hover::before {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-secondary);
+  transform: translateX(0);
 }/*# sourceMappingURL=style.css.map */
