--- a/styles/style.scss
+++ b/styles/style.scss
@@ -205,4 +205,22 @@ section{
         border-radius: 50%;
         padding: 1rem;
     }
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translateX(100%);
+        transition: all 0.4s ease-in-out;
+        z-index: -1;
+    }
+        &:hover{
+            &::before{
+                width: 100%;
+                height: 100%;
+                background-color: var(--color-secondary);
+                transform: translateX(0);
+            }
+        }
+    
 }
