--- a/styles/style.css
+++ b/styles/style.css
@@ -232,4 +232,22 @@ section {
   height: 100%;
   background-color: var(--color-secondary);
   transform: translateX(0);
+}
+
+.main-title {
+  text-align: center;
+}
+.main-title h2 {
+  position: relative;
+  text-transform: uppercase;
+  font-size: 4rem;
+  font-weight: 700;
+}
+.main-title h2 span {
+  color: var(--color-secondary);
+}
+.main-title h2 span .bg-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }/*# sourceMappingURL=style.css.map */
