--- a/styles/style.scss
+++ b/styles/style.scss
@@ -214,13 +214,29 @@ section{
         transition: all 0.4s ease-in-out;
         z-index: -1;
     }
-        &:hover{
-            &::before{
-                width: 100%;
-                height: 100%;
-                background-color: var(--color-secondary);
-                transform: translateX(0);
+    &:hover{
+        &::before{
+            width: 100%;
+            height: 100%;
+            background-color: var(--color-secondary);
+            transform: translateX(0);
+        }
+    }
+}
+.main-title{
+    text-align: center;
+    h2{
+        position: relative;
+        text-transform: uppercase;
+        font-size: 4rem;
+        font-weight: 700;
+        span{
+            color: var(--color-secondary);
+            .bg-text{
+                position: absolute;
+                top: 50%;
+                left: 50%;
             }
         }
-    
+    }
 }
