--- a/styles/style.css
+++ b/styles/style.css
@@ -246,8 +246,14 @@ section {
 .main-title h2 span {
   color: var(--color-secondary);
 }
-.main-title h2 span .bg-text {
+.main-title h2 .bg-text {
   position: absolute;
   top: 50%;
   left: 50%;
+  color: var(--color-grey-5);
+  transition: all 0.4s ease-in-out;
+  z-index: -1;
+  transform: translate(-50%, -50%);
+  font-weight: 800;
+  font-size: 6.3rem;
 }/*# sourceMappingURL=style.css.map */
