--- a/styles/style.scss
+++ b/styles/style.scss
@@ -232,11 +232,17 @@ section{
         font-weight: 700;
         span{
             color: var(--color-secondary);
-            .bg-text{
-                position: absolute;
-                top: 50%;
-                left: 50%;
-            }
+        }
+        .bg-text{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            color: var(--color-grey-5);
+            transition: all 0.4s ease-in-out;
+            z-index: -1;
+            transform: translate(-50%, -50%);
+            font-weight: 800;
+            font-size: 6.3rem;
         }
     }
 }
