about left section

--- a/styles/style.css
+++ b/styles/style.css
@@ -241,6 +241,18 @@ section {
   height: 2px;
   background-color: var(--color-grey-5);
 }
+.about-container .left-about {
+  padding-right: 1rem;
+}
+.about-container .left-about p {
+  line-height: 1rem;
+  padding: 1rem;
+  color: var(--color-grey-1);
+}
+.about-container .left-about h4 {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
 
 .btn-con {
   display: flex;
