--- a/styles/style.scss
+++ b/styles/style.scss
@@ -230,6 +230,18 @@ section {
       }
     }
   }
+  .left-about {
+    padding-right: 1rem;
+    p {
+      line-height: 1rem;
+      padding: 1rem;
+      color: var(--color-grey-1);
+    }
+    h4 {
+      font-size: 2rem;
+      text-transform: uppercase;
+    }
+  }
 }
 
 .btn-con {
