--- a/styles/style.scss
+++ b/styles/style.scss
@@ -448,6 +448,60 @@ section {
   transform: scale(1);
 }
 
+/* Blog Section */
+.blogs {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 3rem;
+  .blog {
+    position: relative;
+    background-color: var(--color-grey-5);
+    border-radius: 5px;
+    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
+    transition: all 0.4s ease-in-out;
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
+      transition: all 0.4s ease-in-out;
+      img {
+        filter: grayscale(0);
+        transform: scale(1.1);
+        box-shadow: 1px 4px 20px rgba(0, 0, 0, 0.8);
+      }
+    }
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      filter: grayscale(100%);
+      transition: all 0.4s ease-in-out;
+    }
+    .blog-text {
+      margin-top: -7px;
+      padding: 1.1rem;
+      border-top: 8px solid var(--color-secondary);
+      h4 {
+        font-size: 1.5rem;
+        margin-bottom: 0.7rem;
+        transition: all 0.4s ease-in-out;
+        cursor: pointer;
+        &:hover {
+          color: var(--color-secondary);
+        }
+      }
+      p {
+        color: var(--color-grey-2);
+        line-height: 2rem;
+        padding-bottom: 1rem;
+      }
+    }
+  }
+}
+
+/*Independed components*/
 .btn-con {
   display: flex;
   align-self: flex-start;
@@ -460,7 +514,6 @@ section {
   border: 1px solid var(--color-secondary);
   display: flex;
   align-self: flex-start;
-  display: flex;
   align-items: center;
   overflow: hidden;
   .btn-text {
@@ -480,18 +533,21 @@ section {
     top: 0;
     right: 0;
     transform: translateX(100%);
-    transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-out;
     z-index: -1;
   }
   &:hover {
+    transition: all 0.4s ease-out;
     &::before {
       width: 100%;
       height: 100%;
       background-color: var(--color-secondary);
       transform: translateX(0);
+      transition: all 0.4s ease-out;
     }
   }
 }
+
 .main-title {
   text-align: center;
   h2 {
