--- a/styles/style.scss
+++ b/styles/style.scss
@@ -510,6 +510,63 @@ section {
   padding-top: 3.5rem;
   .left-contact {
     flex: 2;
+    h4 {
+      margin-top: 1rem;
+      text-transform: uppercase;
+      font-size: 2rem;
+    }
+    p {
+      margin: 1rem 0;
+      line-height: 2rem;
+    }
+    .contact-info {
+      .contact-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        p {
+          margin: 0.3rem 0 !important;
+          padding: 0 !important;
+        }
+        .icon {
+          display: grid;
+          grid-template-columns: 40px 1fr;
+          i {
+            display: flex;
+            align-items: center;
+            font-size: 1.2rem;
+          }
+        }
+      }
+    }
+    .contact-icon {
+      display: flex;
+      margin-top: 2rem;
+      a {
+        display: flex;
+        align-items: center;
+        color: var(--color-white);
+        cursor: pointer;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin: 0.4rem;
+        transition: all 0.4s ease-in-out;
+        &:hover {
+          background-color: var(--color-secondary);
+          i {
+            color: var(--color-primary);
+          }
+        }
+        i {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 1.3rem;
+        }
+      }
+    }
   }
   .right-contact {
     flex: 3;
@@ -536,6 +593,10 @@ section {
       :last-child {
         margin-left: 1.5rem;
       }
+    }
+    .submit-btn {
+      display: flex;
+      justify-content: flex-start;
     }
   }
 }
