responsive design header

--- a/styles/style.css
+++ b/styles/style.css
@@ -733,6 +733,15 @@ section {
   }
   .header-content {
     grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .left-header .h-shape {
+    display: none;
+  }
+  .right-header {
+    grid-row: 1;
+    width: 90%;
+    margin: 0 auto;
   }
   .controlls {
     top: auto;
