--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -13,6 +13,18 @@
 
   .header-content {
     grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+
+  .left-header {
+    .h-shape {
+      display: none;
+    }
+  }
+  .right-header {
+    grid-row: 1;
+    width: 90%;
+    margin: 0 auto;
   }
 
   .controlls {
