--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -25,6 +25,37 @@
     grid-row: 1;
     width: 90%;
     margin: 0 auto;
+    .name {
+      font-size: 2.5rem !important;
+    }
+  }
+
+  .header-content .left-header .image {
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  .about-container {
+    grid-template-columns: 1fr;
+    .right-about {
+      grid-template-columns: 1fr;
+      padding-top: 2.5rem;
+    }
+    .left-about {
+      padding-right: 0;
+      p {
+        padding-left: 0;
+      }
+    }
+  }
+
+  .timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 0;
+  }
+
+  .section {
+    padding: 2rem 2.5rem;
   }
 
   .controlls {
