--- a/styles/style.css
+++ b/styles/style.css
@@ -743,6 +743,33 @@ section {
     width: 90%;
     margin: 0 auto;
   }
+  .right-header .name {
+    font-size: 2.5rem !important;
+  }
+  .header-content .left-header .image {
+    margin: 0 auto;
+    width: 90%;
+  }
+  .about-container {
+    grid-template-columns: 1fr;
+  }
+  .about-container .right-about {
+    grid-template-columns: 1fr;
+    padding-top: 2.5rem;
+  }
+  .about-container .left-about {
+    padding-right: 0;
+  }
+  .about-container .left-about p {
+    padding-left: 0;
+  }
+  .timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 0;
+  }
+  .section {
+    padding: 2rem 2.5rem;
+  }
   .controlls {
     top: auto;
     bottom: 0;
