--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,4 +1,116 @@
 @media screen and (max-width: 576px) {
+  .about-container {
+    grid-template-columns: 1fr;
+    .right-about {
+      grid-template-columns: 1fr;
+      padding-top: 2.5rem;
+    }
+    .left-about {
+      padding-right: 0;
+      p {
+        padding-left: 0;
+      }
+    }
+  }
+
+  .timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 0;
+  }
+
+  .about-stats {
+    .progress-bars {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  .portfolios {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+
+  .blogs {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+
+  .section {
+    padding: 2rem 2.5rem;
+  }
+
+  .main-title {
+    h2 {
+      font-size: 2rem;
+      span {
+        font-size: 2.5rem;
+      }
+      .bg-text {
+        font-size: 3rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1432px) {
+  header {
+    padding: 0 !important;
+  }
+
+  .section {
+    padding: 7rem 11rem;
+  }
+
+  .contact-content-con {
+    flex-direction: column;
+    .right-contact {
+      margin-left: 0;
+      margin-top: 2.5rem;
+    }
+  }
+
+  .contact-content-con .right-contact .i-c-2 {
+    flex-direction: column;
+  }
+
+  .contact-content-con .right-contact .i-c-2 :last-child {
+    margin-left: 0;
+    margin-top: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 1070px) {
+  .about-container {
+    grid-template-columns: 1fr;
+    .right-about {
+      padding-top: 2.5rem;
+    }
+  }
+
+  .portfolios {
+    grid-template-columns: 1fr 1fr;
+  }
+  .blogs {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .main-title {
+    h2 {
+      font-size: 4rem;
+      span {
+        font-size: 4rem;
+      }
+      .bg-text {
+        font-size: 4.5rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 970px) {
+  .section {
+    padding: 7rem 6rem;
+  }
+
   header {
     padding: 0;
   }
@@ -35,29 +147,6 @@
     width: 90%;
   }
 
-  .about-container {
-    grid-template-columns: 1fr;
-    .right-about {
-      grid-template-columns: 1fr;
-      padding-top: 2.5rem;
-    }
-    .left-about {
-      padding-right: 0;
-      p {
-        padding-left: 0;
-      }
-    }
-  }
-
-  .timeline {
-    grid-template-columns: 1fr;
-    padding-bottom: 0;
-  }
-
-  .section {
-    padding: 2rem 2.5rem;
-  }
-
   .controlls {
     top: auto;
     bottom: 0;
@@ -67,7 +156,34 @@
     transform: translateX(-50%);
     width: 100%;
     .control {
-      margin: 1rem 0.3rem;
+      margin: 0.6rem 1.5rem !important;
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .container {
+    padding: 7rem 3rem;
+  }
+  .about-stats .progress-bars {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .about-container .right-about {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .timeline {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .main-title {
+    h2 {
+      font-size: 3rem;
+      span {
+        font-size: 3rem;
+      }
+      .bg-text {
+        font-size: 4rem;
+      }
     }
   }
 }
