--- a/styles/style.scss
+++ b/styles/style.scss
@@ -40,7 +40,7 @@
 
 body {
   background-color: var(--color-primary);
-  font-family: "Poppins", sans-serif;
+  font-family: "Courier New", "Consolas", "Poppins", monospace, sans-serif;
   font-size: 1.1rem;
   color: var(--color-white);
   transition: all 0.4s ease-in-out;
